# agg

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool  surface.geo  wireframe.c
doc/: agg.dxy  agg.dxy.bak
doc/auto/: agg.el
doc/html/: agg_8c.html  agg_8h.html  annotated.html  binomials_8c.html  body_8c.html  classes.html  cut_8c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  distribution_8c.html  doxy_8txt.html  files.html  formula.repository  functions.html  functions_8c.html  functions_vars.html  globals.html  globals_a.html  globals_d.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_i.html  globals_m.html  globals_n.html  globals_s.html  globals_t.html  globals_type.html  globals_vars.html  group__bernstein.html  group__blends.html  group__body.html  group__curves.html  group__functions.html  group__intersections.html  group__mesh.html  group__parser.html  group__patches.html  group__sections.html  (+26 more)
doc/latex/: agg_8c.tex  agg_8h.tex  annotated.tex  binomials_8c.tex  body_8c.tex  cut_8c.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  distribution_8c.tex  doxy_8txt.tex  files.tex  functions_8c.tex  group__bernstein.tex  group__blends.tex  group__body.tex  group__curves.tex  group__functions.tex  group__intersections.tex  group__mesh.tex  group__parser.tex  group__patches.tex  group__sections.tex  group__shapes.tex  group__surfaces.tex  group__transforms.tex  group__types.tex  group__variables.tex  index.tex  interp_8c.tex  mesh_8c.tex  modules.tex  naca_8c.tex  parser_8c.tex  refman.tex  shape_8c.tex  spacing_8c.tex  struct__agg__body__t.tex  struct__agg__distribution__t.tex  struct__agg__expression__t.tex  struct__agg__function__call__t.tex  struct__agg__local__transform__t.tex  (+7 more)
notes/: notes.aux  notes.tex
notes/auto/: notes.el
octave/: aggmesh.m  capfunc.m  fuselage.m  hemisphere.m  icosphere.m  idxtest.m  lround.m  mkedges.m  readtri.m  rround.m  rtfit.m  segplot.m  spacing.m  uvsphere.m
src/: Makefile  Makefile.am  Makefile.in  affine.c  agg-config  agg-config.in  agg-private.h  agg.c  agg.h  bernstein.c  bernstein.lo  blend.c  blend.lo  body.c  body.lo  broyden.c  chebyshev.c  curve.c  cut.c  distribution.c  distribution.lo  doxy.txt  functions.c  grid-adaptive.c  grid-adaptive.lo  grid-hemisphere.c  grid-hemisphere.lo  grid-sphere.c  grid-sphere.lo  grid.c  grid.lo  hefsi.c  hefsi.lo  ico.c  ico.lo  interp.c  intersection.c  intersection.lo  libagg.la  library.c  (+26 more)
src/.deps/: affine.Plo  agg.Plo  bernstein.Plo  binomials.Plo  blend.Plo  body.Plo  broyden.Plo  chebyshev.Plo  curve.Plo  cut.Plo  distribution.Plo  fitted.Plo  functions.Plo  grid-adaptive.Plo  grid-hemisphere.Plo  grid-sphere.Plo  grid.Plo  hefsi.Plo  hole.Plo  ico.Plo  interp.Plo  intersection.Plo  library.Plo  lsqr.Plo  mesh.Plo  moller-raytri.Plo  moller-tri.Plo  naca.Plo  parser.Plo  patch.Plo  section.Plo  shape.Plo  spacing.Plo  surface.Plo  tinyexpr.Plo  transform.Plo  transform3d.Plo  triangle.Plo  triangulate.Plo  variables.Plo  (+2 more)
src/.libs/: libagg-0.1.so.0  libagg-0.1.so.0.0.0  libagg.lai
tests/: aircraft.agg  aircraft.geo  aircraft.safe  calcellipse.m  ellipsoid.agg  ffit.m  fitellipse.m  fteval.m  fuselage.agg  half-wing.agg  half-wing.geo  hemisphere.agg  hemisphere.geo  log  mkcurve.m  nacelle.agg  nacelle.msh  octave-workspace  parser-test  readsurfs.m  sphere.agg  spheres.agg  surface-blend.geo  surface-no-blend.geo  surface.geo  surface1.geo  surface2.geo  sweep.agg  test.agg  tube.agg  wing.agg  wing.geo  wing.msh  wing.safe  wing1.agg  wingl.geo  wings.geo
tools/: Makefile  Makefile.am  Makefile.in  agg-generate  agg-generate.c  agg-parse  agg-parse.c  agg-test  agg-test.c
tools/.deps/: agg-generate.Po  agg-parse.Po  agg-test.Po
